rest/knowledge/v1/README.md
# Go API client for openapi

This is the public Twilio REST API.

## Overview
This API client was generated by the [OpenAPI Generator](https://openapi-generator.tech) project from the OpenAPI specs located at [twilio/twilio-oai](https://github.com/twilio/twilio-oai/tree/main/spec).  By using the [OpenAPI-spec](https://www.openapis.org/) from a remote server, you can easily generate an API client.

- API version: 1.0.0
- Package version: 1.0.0
- Build package: com.twilio.oai.TwilioGoGenerator
For more information, please visit [https://support.twilio.com](https://support.twilio.com)

## Installation

Install the following dependencies:

```shell
go get github.com/stretchr/testify/assert
go get golang.org/x/net/context
```

Put the package under your project folder and add the following in import:

```golang
import "./openapi"
```

## Documentation for API Endpoints

All URIs are relative to *https://knowledge.twilio.com*

Class | Method | HTTP request | Description
------------ | ------------- | ------------- | -------------
*KnowledgeApi* | [**CreateKnowledge**](docs/KnowledgeApi.md#createknowledge) | **Post** /v1/Knowledge | Create knowledge
*KnowledgeApi* | [**DeleteKnowledge**](docs/KnowledgeApi.md#deleteknowledge) | **Delete** /v1/Knowledge/{id} | Delete knowledge
*KnowledgeApi* | [**FetchKnowledge**](docs/KnowledgeApi.md#fetchknowledge) | **Get** /v1/Knowledge/{id} | Get knowledge
*KnowledgeApi* | [**ListKnowledge**](docs/KnowledgeApi.md#listknowledge) | **Get** /v1/Knowledge | List all knowledge
*KnowledgeApi* | [**UpdateKnowledge**](docs/KnowledgeApi.md#updateknowledge) | **Put** /v1/Knowledge/{id} | Update knowledge
*KnowledgeChunksApi* | [**ListKnowledgeChunks**](docs/KnowledgeChunksApi.md#listknowledgechunks) | **Get** /v1/Knowledge/{id}/Chunks | List knowledge chunks
*KnowledgeStatusApi* | [**FetchKnowledgeStatus**](docs/KnowledgeStatusApi.md#fetchknowledgestatus) | **Get** /v1/Knowledge/{id}/Status | Get knowledge status


## Documentation For Models

 - [ListKnowledgeResponseMeta](docs/ListKnowledgeResponseMeta.md)
 - [KnowledgeV1Knowledge](docs/KnowledgeV1Knowledge.md)
 - [KnowledgeV1CreateKnowledgeRequest](docs/KnowledgeV1CreateKnowledgeRequest.md)
 - [KnowledgeV1UpdateKnowledgeRequest](docs/KnowledgeV1UpdateKnowledgeRequest.md)
 - [ListKnowledgeChunksResponse](docs/ListKnowledgeChunksResponse.md)
 - [ListKnowledgeResponse](docs/ListKnowledgeResponse.md)
 - [KnowledgeV1KnowledgeChunkWithScore](docs/KnowledgeV1KnowledgeChunkWithScore.md)
 - [KnowledgeV1KnowledgeStatus](docs/KnowledgeV1KnowledgeStatus.md)
 - [KnowledgeV1CreatePolicyRequest](docs/KnowledgeV1CreatePolicyRequest.md)
 - [KnowledgeV1KnowledgeChunk](docs/KnowledgeV1KnowledgeChunk.md)
 - [ListKnowledgeResponseKnowledge](docs/ListKnowledgeResponseKnowledge.md)


## Documentation For Authorization



## accountSid_authToken

- **Type**: HTTP basic authentication

Example

```golang
auth := context.WithValue(context.Background(), sw.ContextBasicAuth, sw.BasicAuth{
    UserName: "username",
    Password: "password",
})
r, err := client.Service.Operation(auth, args)
```

