rest/knowledge/v2/README.md
# Go API client for openapi

APIs for managing knowledge bases and knowledge content for AI-powered applications.

## Overview
This API client was generated by the [OpenAPI Generator](https://openapi-generator.tech) project from the OpenAPI specs located at [twilio/twilio-oai](https://github.com/twilio/twilio-oai/tree/main/spec).  By using the [OpenAPI-spec](https://www.openapis.org/) from a remote server, you can easily generate an API client.

- API version: 1.0
- Package version: 1.0.0
- Build package: com.twilio.oai.TwilioGoGenerator
For more information, please visit [https://support.twilio.com](https://support.twilio.com)

## Installation

Install the following dependencies:

```shell
go get github.com/stretchr/testify/assert
go get golang.org/x/net/context
```

Put the package under your project folder and add the following in import:

```golang
import "./openapi"
```

## Documentation for API Endpoints

All URIs are relative to *https://knowledge.twilio.com*

Class | Method | HTTP request | Description
------------ | ------------- | ------------- | -------------
*ControlPlaneKnowledgeBasesApi* | [**CreateKnowledgeBase**](docs/ControlPlaneKnowledgeBasesApi.md#createknowledgebase) | **Post** /v2/ControlPlane/KnowledgeBases | Create a Knowledge Base
*ControlPlaneKnowledgeBasesApi* | [**DeleteKnowledgeBase**](docs/ControlPlaneKnowledgeBasesApi.md#deleteknowledgebase) | **Delete** /v2/ControlPlane/KnowledgeBases/{kbId} | Delete a Knowledge Base
*ControlPlaneKnowledgeBasesApi* | [**FetchKnowledgeBase**](docs/ControlPlaneKnowledgeBasesApi.md#fetchknowledgebase) | **Get** /v2/ControlPlane/KnowledgeBases/{kbId} | Retrieve a Knowledge Base
*ControlPlaneKnowledgeBasesApi* | [**ListKnowledgeBases**](docs/ControlPlaneKnowledgeBasesApi.md#listknowledgebases) | **Get** /v2/ControlPlane/KnowledgeBases | List Knowledge Bases
*ControlPlaneKnowledgeBasesApi* | [**UpdateKnowledgeBase**](docs/ControlPlaneKnowledgeBasesApi.md#updateknowledgebase) | **Patch** /v2/ControlPlane/KnowledgeBases/{kbId} | Update a Knowledge Base
*ControlPlaneOperationsApi* | [**FetchOperation**](docs/ControlPlaneOperationsApi.md#fetchoperation) | **Get** /v2/ControlPlane/Operations/{operationId} | Get Operation Status
*KnowledgeBasesKnowledgeApi* | [**CreateKnowledge**](docs/KnowledgeBasesKnowledgeApi.md#createknowledge) | **Post** /v2/KnowledgeBases/{kbId}/Knowledge | Create Knowledge Source
*KnowledgeBasesKnowledgeApi* | [**DeleteKnowledge**](docs/KnowledgeBasesKnowledgeApi.md#deleteknowledge) | **Delete** /v2/KnowledgeBases/{kbId}/Knowledge/{knowledgeId} | Delete Knowledge Source
*KnowledgeBasesKnowledgeApi* | [**FetchKnowledge**](docs/KnowledgeBasesKnowledgeApi.md#fetchknowledge) | **Get** /v2/KnowledgeBases/{kbId}/Knowledge/{knowledgeId} | Retrieve Knowledge Source
*KnowledgeBasesKnowledgeApi* | [**ListKnowledge**](docs/KnowledgeBasesKnowledgeApi.md#listknowledge) | **Get** /v2/KnowledgeBases/{kbId}/Knowledge | List Knowledge Sources
*KnowledgeBasesKnowledgeApi* | [**UpdateKnowledge**](docs/KnowledgeBasesKnowledgeApi.md#updateknowledge) | **Patch** /v2/KnowledgeBases/{kbId}/Knowledge/{knowledgeId} | Update Knowledge Source
*KnowledgeBasesKnowledgeChunksApi* | [**ListKnowledgeChunks**](docs/KnowledgeBasesKnowledgeChunksApi.md#listknowledgechunks) | **Get** /v2/KnowledgeBases/{kbId}/Knowledge/{knowledgeId}/Chunks | List Knowledge Chunks
*KnowledgeBasesSearchApi* | [**CreateKnowledgeSearch**](docs/KnowledgeBasesSearchApi.md#createknowledgesearch) | **Post** /v2/KnowledgeBases/{kbId}/Search | Search Knowledge Chunks


## Documentation For Models

 - [KnowledgeCore](docs/KnowledgeCore.md)
 - [Meta](docs/Meta.md)
 - [OperationStatusError](docs/OperationStatusError.md)
 - [CreateKnowledgeSearchResponse](docs/CreateKnowledgeSearchResponse.md)
 - [KnowledgeChunk](docs/KnowledgeChunk.md)
 - [KnowledgeSourceTypes](docs/KnowledgeSourceTypes.md)
 - [SupportedFileMimeType](docs/SupportedFileMimeType.md)
 - [Knowledge](docs/Knowledge.md)
 - [KnowledgeSearch](docs/KnowledgeSearch.md)
 - [CreateKnowledgeBaseResponse](docs/CreateKnowledgeBaseResponse.md)
 - [KnowledgeBase](docs/KnowledgeBase.md)
 - [PatchKnowledgeBaseRequest](docs/PatchKnowledgeBaseRequest.md)
 - [OperationStatus](docs/OperationStatus.md)
 - [FileSourceDetails](docs/FileSourceDetails.md)
 - [KnowledgeErrorGroup](docs/KnowledgeErrorGroup.md)
 - [KnowledgeErrorInstance](docs/KnowledgeErrorInstance.md)
 - [DeleteKnowledgeBaseResponse](docs/DeleteKnowledgeBaseResponse.md)
 - [KnowledgeMeta](docs/KnowledgeMeta.md)
 - [KnowledgeChunkResult](docs/KnowledgeChunkResult.md)
 - [TwilioError](docs/TwilioError.md)
 - [TextSourceDetails](docs/TextSourceDetails.md)
 - [ListKnowledgeChunksResponse](docs/ListKnowledgeChunksResponse.md)
 - [KnowledgeBaseList](docs/KnowledgeBaseList.md)
 - [ListKnowledgeResponse](docs/ListKnowledgeResponse.md)
 - [KnowledgeBaseCore](docs/KnowledgeBaseCore.md)
 - [UpdateKnowledgeBaseResponse](docs/UpdateKnowledgeBaseResponse.md)
 - [OperationResultResourceId](docs/OperationResultResourceId.md)
 - [WebSourceDetails](docs/WebSourceDetails.md)
 - [UpdateKnowledgeResponse](docs/UpdateKnowledgeResponse.md)
 - [ChunkProvenanceFields](docs/ChunkProvenanceFields.md)


## Documentation For Authorization



## accountSid_authToken

- **Type**: HTTP basic authentication

Example

```golang
auth := context.WithValue(context.Background(), sw.ContextBasicAuth, sw.BasicAuth{
    UserName: "username",
    Password: "password",
})
r, err := client.Service.Operation(auth, args)
```

